# Orion

./: .gitignore  .gitmodules  README.md  gradle.properties  progress_config.json
.github/workflows/: build.yml  update-readme.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: common_dlls.json
app/src/main/assets/box64/: box64-0.4.1.tzst
app/src/main/assets/fexcore/: fexcore-2601.tzst
app/src/main/assets/graphics_driver/: adrenotools-turnip26.0.0.tzst
app/src/main/assets/inputcontrols/profiles/: controls-3.icp
app/src/main/assets/wowbox64/: wowbox64-0.4.1.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/OpenXR-SDK/include/openxr/: openxr_platform.h  openxr_platform_defines.h  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
app/src/main/cpp/OpenXR-SDK/openxr/openxr/: openxr.h
app/src/main/cpp/OpenXR-SDK/src/: xr_generated_dispatch_table.c  xr_generated_dispatch_table.h  xr_generated_dispatch_table_core.c  xr_generated_dispatch_table_core.h
app/src/main/cpp/OpenXR-SDK/src/common/: extra_algorithms.h  filesystem_utils.cpp  filesystem_utils.hpp  hex_and_handles.h  object_info.cpp  object_info.h  platform_utils.hpp  stdfs_conditions.h  unique_asset.h  vulkan_debug_object_namer.hpp  xr_dependencies.h  xr_linear.h
app/src/main/cpp/OpenXR-SDK/src/loader/: android_utilities.cpp  android_utilities.h  api_layer_interface.cpp  api_layer_interface.hpp  exception_handling.hpp  loader_core.cpp  loader_init_data.cpp  loader_init_data.hpp  loader_instance.cpp  loader_instance.hpp  loader_logger.cpp  loader_logger.hpp  loader_logger_recorders.cpp  loader_logger_recorders.hpp  loader_platform.hpp  manifest_file.cpp  manifest_file.hpp  runtime_interface.cpp  runtime_interface.hpp  xr_generated_loader.cpp  xr_generated_loader.hpp
app/src/main/cpp/adrenotools/: .gitmodules  meson.build
app/src/main/cpp/adrenotools/src/: driver.cpp
app/src/main/cpp/adrenotools/src/hook/: meson.build
app/src/main/cpp/patchelf/src/: patchelf.cc  patchelf.h
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  alsa_client.c  drawable.c  fakeinput.cpp  gpu_image.c  patchelf_wrapper.cpp  sysvshared_memory.c  vulkan_jni.cpp  window.frag  winhandler.c
app/src/main/cpp/xr/: engine.c  engine.h  framebuffer.c  input.c  input.h  main.c  math.h  renderer.c  renderer.h
app/src/main/java/com/winlator/cmod/: AdrenotoolsFragment.java  BigPictureActivity.java  ContainerDetailFragment.java  ContainersFragment.java  ContentsFragment.java  ControlsEditorActivity.java  ExternalControllerBindingsActivity.java  MainActivity.kt  SettingsFragment.java  ShortcutBroadcastReceiver.java  ShortcutsFragment.java  XServerDisplayActivity.java  XrActivity.java
app/src/main/java/com/winlator/cmod/alsaserver/: RequestCodes.java
app/src/main/java/com/winlator/cmod/bigpicture/: BigPictureAdapter.java  CarouselItemDecoration.java  TiledBackgroundView.java
app/src/main/java/com/winlator/cmod/box64/: Box64EditPresetDialog.java  Box64Preset.java
app/src/main/java/com/winlator/cmod/container/: Container.java  ContainerManager.java  Shortcut.java
app/src/main/java/com/winlator/cmod/contentdialog/: AddEnvVarDialog.java  ContentDialog.java  DXVKConfigDialog.java  DriverDownloadDialog.java  DriverRepo.java  GraphicsDriverConfigDialog.java  RendererOptionsDialog.java  RepositoryManagerDialog.java  ShortcutSettingsDialog.java
app/src/main/java/com/winlator/cmod/contents/: ContentProfile.java  ContentsManager.java  Downloader.java
app/src/main/java/com/winlator/cmod/core/: AppUtils.java  CPUStatus.java  CubicBezierInterpolator.java  DefaultVersion.java  DownloadProgressDialog.java  ElfHelper.java  ExeIconExtractor.java  FileUtils.java  KeyValueSet.java  PatchElf.java  PreloaderDialog.java  ProcessHelper.java  StringUtils.java  TarCompressorUtils.java  WineInfo.java  WineUtils.java  WinlatorFilesProvider.java
app/src/main/java/com/winlator/cmod/fexcore/: FEXCoreEditPresetDialog.java  FEXCoreManager.java
app/src/main/java/com/winlator/cmod/inputcontrols/: ControlElement.java  ControlsProfile.java  ExternalController.java  ExternalControllerBinding.java  FakeInputWriter.java
app/src/main/java/com/winlator/cmod/midi/: MidiHandler.java
app/src/main/java/com/winlator/cmod/renderer/: GPUImage.java  Texture.java  VulkanRenderer.java
app/src/main/java/com/winlator/cmod/sysvshm/: SysVSharedMemory.java
app/src/main/java/com/winlator/cmod/ui/: OrionApp.kt  SidebarView.kt
app/src/main/java/com/winlator/cmod/widget/: EnvVarsView.java  HudDataSource.java  InputControlsView.java  MagnifierView.java  NumberPicker.java  SeekBar.java  TouchpadView.java  WinlatorHUD.java  XServerView.java
app/src/main/java/com/winlator/cmod/winhandler/: RequestCodes.java  TaskManagerDialog.kt  WinHandler.java
app/src/main/java/com/winlator/cmod/xconnector/: ConnectionHandler.java  UnixSocketConfig.java  XConnectorEpoll.java  XInputStream.java  (+1 more)
app/src/main/res/drawable/: bordered_panel.xml  button_neutral_normal.xml  button_neutral_pressed.xml  button_positive_normal.xml  button_positive_pressed.xml  content_dialog_background.xml  content_dialog_background_dark.xml  field_action_button.xml  gradient_bottom_overlay.xml  icon_download_file_blue.xml  icon_monitor.xml  icon_mouse.xml  icon_open_file_blue.xml  progress_bar_indeterminate_dark.xml  sidebar_item_ripple.xml  sidebar_submenu_bg.xml
app/src/main/res/layout/: container_detail_fragment.xml  download_progress_dialog.xml  dxvk_config_dialog.xml  file_manager_fragment.xml  gradient_bottom_overlay.xml  graphics_driver_config_dialog.xml  input_controls_fragment.xml  left_sidebar.xml  preloader_dialog.xml  renderer_options_dialog.xml  settings_fragment.xml  shortcut_grid_item.xml  shortcut_settings_dialog.xml  wine_config_dialog.xml  xserver_display_activity.xml
app/src/main/res/menu/: main_menu.xml  open_file_popup_menu.xml  shortcut_popup_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
gradle/: libs.versions.toml
scripts/: update_progress.py
(+49 files in other folders)
